--- a/notebooks/absa.ipynb
+++ b/notebooks/absa.ipynb
@@ -315,7 +315,8 @@
    "outputs": [],
    "source": [
     "# Load the latest registered model\n",
-    "model = Model(ws, 'absa')"
+    "model = Model(ws, name='absa',version=8)\n",
+    "print(\"Loaded model version:\",model.version)"
    ]
   },
   {
