First clean up of the hyperdrive run

--- a/notebooks/absa.ipynb
+++ b/notebooks/absa.ipynb
@@ -191,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "# Submit and run the estimator\n",
+    "# Show the details of the run\n",
     "RunDetails(run).show()"
    ]
   },
