Added SDK version in first cell

--- a/notebooks/absa-hyperdrive.ipynb
+++ b/notebooks/absa-hyperdrive.ipynb
@@ -13,7 +13,10 @@
     "from azureml.train.estimator import Estimator\n",
     "from azureml.core import Workspace, Datastore, Experiment\n",
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core.compute_target import ComputeTargetException"
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "\n",
+    "# check core SDK version number\n",
+    "print(\"Azure ML SDK Version: \", azureml.core.VERSION)"
    ]
   },
   {
